--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore Basic
+      run: dotnet restore BasicApiSln.sln
       working-directory: net core/
     - name: Build
       run: dotnet build --no-restore
