--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore BasicApiSln.sln
-      working-directory: net core/
+      run: dotnet restore
+      working-directory: net core/BasicApiSln.sln
     - name: Build
       run: dotnet build --no-restore
     - name: Test
