--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
-      working-directory: net core/BasicApiSln.sln
+      run: dotnet restore "net core/BasicApiSln.sln"  
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build "net core/BasicApiSln.sln" --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test "net core/BasicApiSln.sln" --no-build --verbosity normal
